--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +11,11 @@
         <img src="img/salmon.png" alt="slamon-img">
         <h1>salamon-cookies</h1>
     </header>
-    
+    <div id="salesTabel">
 
-<script src="js/app.js"></script>
+    </div>
+
+
+    <script src="js/app.js"></script>
 </body>
 </html>
