--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>salamon-cokkies</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <img src="img/salmon.png" alt="slamon-img">
         <h1>salamon-cookies</h1>
     </header>
-    <div id="salesTabel">
-
-    </div>
+  
 
 
     <script src="js/app.js"></script>
