--- a/slaes.html
+++ b/slaes.html
@@ -10,6 +10,9 @@
         <img src="img/salmon.png" alt="slamon-img">
         <h1>salamon-cookies</h1>
     </header>
+    <div id="salesTabel">
+
+    </div>
     
 
 <script src="js/app.js"></script>
