--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <button><a href="slaes.html">sales</a></button>
     <header>
         <img src="img/salmon.png" alt="slamon-img">
         <h1>salamon-cookies</h1>
