--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <button><a href="slaes.html">sales</a></button>
+
     <header>
+        <nav id="nav">
+            <a href="index.html">Home</a>
+            <a href="Sales.html">Sales</a>
+            <a href="">About</a>
+        </nav>
         <img src="img/salmon.png" alt="slamon-img">
         <h1>salamon-cookies</h1>
     </header>
