--- a/sales.html
+++ b/sales.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <header>
+        <nav id="nav">
+            <a href="index.html">Home</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+        </nav>
         <img src="img/salmon.png" alt="slamon-img">
         <h1>salamon-cookies</h1>
     </header>
