--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
         </nav>
         <div id="salmon-img">
 
-            <img src="img/salmon.png" alt="slamon-img">
+            <img src="img/fsm_cookieman_g1.jpg" alt="slamon-img">
         </div>
         <h1>salamon-cookies</h1>
+        <div id="samon-img">
+            <img src="img/salmon.png" alt="salmon-img">
+
+        </div>
     </header>
     <main>
         <section id="intro-section">
+            <h3>About us</h3>
             <div id="bio">
                 <p>Welcome to Salmon Cookies, world’s best bakery. The Salmon Cookies is a business in different
                     countries.
@@ -38,6 +43,7 @@
 
             </div>
             <div id="samples">
+                <h3>samples of what we make</h3>
                 <img src="img/sample1.png" alt="">
                 <img src="img/sample2-removebg-preview.png" alt="">
             </div>
@@ -78,10 +84,10 @@
     </main>
     <footer>
         <div>
-            <p>
-                ©2020 Osama Al-thabteh. All rights reserved
+            
+                
 
-            </p>
+            <a href="https://github.com/Othabteh">©2020 Osama Al-thabteh. All rights reserved</a>
         </div>
 
     </footer>
