--- a/sales.html
+++ b/sales.html
@@ -73,7 +73,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="submit" value="Submit">
+                            <input id="sub" type="submit" value="Submit">
                         </td>
                         
                     </tr>
