add some styles

--- a/sales.html
+++ b/sales.html
@@ -52,7 +52,7 @@
                             <label for="minHourlyCust">Min Hourly Customer</label>
                         </td>
                         <td>
-                            <input type="number" id="minHourlyCust" required min="1" max="100">
+                            <input type="number" id="minHourlyCust" required min="1" >
                         </td>
                     </tr>
                     <tr>
@@ -60,7 +60,7 @@
                             <label for="maxHourlyCust">Max Hourly Customer</label>
                         </td>
                         <td>
-                            <input type="number" id="maxHourlyCust" required min="1" max="100">
+                            <input type="number" id="maxHourlyCust" required min="1">
                         </td>
                     </tr>
                     <tr>
@@ -68,7 +68,7 @@
                             <label for="avgCookie">Average Cookie</label>
                         </td>
                         <td>
-                            <input type="number" id="avgCookie" required min="1" max="100">
+                            <input type="number" id="avgCookie" required min="1" >
                         </td>
                     </tr>
                     <tr>
