--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
         <nav id="nav">
             <a href="index.html">Home</a>
-            <a href="Sales.html">Sales</a>
+            <a href="sales.html">Sales</a>
             <a href="">About</a>
         </nav>
         <div id="salmon-img">
